<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include
        android:id="@+id/action_bar"
        layout="@layout/pulse_action_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createGroupTV"
        android:layout_below="@+id/action_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/groupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bottom_blue_border"
                    android:hint="@string/create_group_edittext_hint"
                    android:paddingBottom="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/instalively_red"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                cardView:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <LinearLayout
                        android:id="@+id/userListLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                    <android.support.v7.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        app:closeIcon="@drawable/cross_dashboard_svg"
                        app:defaultQueryHint="@string/search_friends"
                        app:searchIcon="@drawable/search_friends_svg"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/existingDescLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="2dp"
                    android:text="@string/existing_desc" />

                <TextView
                    android:id="@+id/existingDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="2dp"
                    android:text="@string/existing_desc_subheader" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/existingListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/add_members_desc" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/friendListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createGroupTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/app_gradient"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/create_group_text"
        android:textColor="@android:color/white"
        android:visibility="gone" />
</RelativeLayout>