<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/tintFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#80000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popupView"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:id="@+id/facebookShare"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_corner_contribution_tab"
            android:layout_marginEnd="32dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/fb_blue_icon"/>
            <com.pulseapp.android.customTextViews.MontserratSemiBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:textSize="11sp"
                android:layout_gravity="center_vertical"
                android:textColor="#3f5aa7"
                android:gravity="center"
                android:text="@string/share_on_facebook"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:id="@+id/watsappShare"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_corner_contribution_tab"
            android:layout_marginEnd="32dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/whatsapp_share_svg"/>
            <com.pulseapp.android.customTextViews.MontserratSemiBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:textSize="11sp"
                android:layout_gravity="center_vertical"
                android:textColor="#5cbf4c"
                android:gravity="center"
                android:text="@string/share_on_watsapp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:id="@+id/intentShare"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_corner_contribution_tab"
            android:layout_marginEnd="32dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/more_blue_svg"/>
            <com.pulseapp.android.customTextViews.MontserratSemiBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:textSize="11sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/pulse_button_color"
                android:gravity="center"
                android:text="@string/share_via"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>